--- a/package.json
+++ b/package.json
@@ -40,11 +40,14 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^29.5.0",
-    "prettier": "^3.0.0",
+    "prettier": "2.7.1",
+    "prettier-eslint": "^15.0.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
