--- a/.env.development.local
+++ b/.env.development.local
@@ -2,4 +2,4 @@ DATABASE_HOST=localhost
 DATABASE_PORT=3306
 DATABASE_NAME=test
 DATABASE_USER=root
-DATABASE_PASSWORD=Q_WU;PY7}AwNzvZ&~G8$gb
+DATABASE_PASSWORD=7835
