--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^29.5.0",
     "prettier": "2.7.1",
@@ -79,5 +80,6 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "packageManager": "yarn@4.0.2"
 }
