--- a/package.json
+++ b/package.json
@@ -31,14 +31,16 @@
     "mysql2": "^3.6.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "ts-api-utils": "^1.0.3",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@darraghor/eslint-plugin-nestjs-typed": "^4.4.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
@@ -48,13 +50,15 @@
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/type-utils": "^6.18.1",
+    "@typescript-eslint/types": "^6.18.1",
     "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.2",
-    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "jest": "^29.5.0",
-    "prettier": "2.7.1",
+    "prettier": "^3.1.1",
     "prettier-eslint": "^15.0.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
